fix: Remove gap from between headline and overline

--- a/.storybook/themes/news.scss
+++ b/.storybook/themes/news.scss
@@ -947,7 +947,7 @@
 					color: var(--global-white),
 				),
 				large-promo-text: (
-					gap: var(--global-spacing-4),
+					gap: 0,
 					components: (
 						heading: (
 							font-size: var(--global-font-size-10),
